--- a/config/cygnus.conf
+++ b/config/cygnus.conf
@@ -5,4 +5,8 @@
 # Uncomment the following line to enable the cygnus OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_KEYBOARD_NAME="Cygnus"
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+CONFIG_ZMK_KEYBOARD_NAME="TBK Mini"
